--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -249,3 +249,12 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - delete
+  - get
+  - list
+  - watch
