ci: add paths to push trigger (#1583)

--- a/.github/workflows/runners.yaml
+++ b/.github/workflows/runners.yaml
@@ -18,6 +18,11 @@ on:
   push:
     branches:
       - 'master'
+    paths:
+      - 'runner/**'
+      - '!runner/Makefile'
+      - '.github/workflows/runners.yaml'
+      - '!**.md'
 
 env:
   RUNNER_VERSION: 2.294.0
