--- a/charts/actions-runner-controller/crds/actions.summerwind.dev_runners.yaml
+++ b/charts/actions-runner-controller/crds/actions.summerwind.dev_runners.yaml
@@ -24,6 +24,9 @@ spec:
         - jsonPath: .spec.repository
           name: Repository
           type: string
+        - jsonPath: .spec.group
+          name: Group
+          type: string
         - jsonPath: .spec.labels
           name: Labels
           type: string
