e2e: Add new option to test rootless docker (#1742)
Related to #1644

Signed-off-by: Yusuke Kuoka <ykuoka@gmail.com>

Signed-off-by: Yusuke Kuoka <ykuoka@gmail.com>

--- a/acceptance/testdata/runnerdeploy.envsubst.yaml
+++ b/acceptance/testdata/runnerdeploy.envsubst.yaml
@@ -56,7 +56,7 @@ spec:
 
       # # Uncomment the below to enable the kubernetes container mode
       # # See https://github.com/actions-runner-controller/actions-runner-controller#runner-with-k8s-jobs
-      containerMode: kubernetes
+      containerMode: ${RUNNER_CONTAINER_MODE}
       workVolumeClaimTemplate:
         accessModes:
         - ReadWriteOnce
