--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: File a bug report
-title: " "
+title: "<Please write what didn't work for you here>"
 labels: ["bug"]
 body:
 - type: checkboxes
