--- a/charts/actions-runner-controller/crds/actions.summerwind.dev_runnerdeployments.yaml
+++ b/charts/actions-runner-controller/crds/actions.summerwind.dev_runnerdeployments.yaml
@@ -1381,6 +1381,9 @@ spec:
                                 type: string
                               type: array
                           type: object
+                        dnsPolicy:
+                          description: DNSPolicy defines how a pod's DNS will be configured.
+                          type: string
                         dockerEnabled:
                           type: boolean
                         dockerEnv:
