ci: replace set-output (#1928)
* ci: replace set-output

* ci: use env var format

Co-authored-by: toast-gear <toast-gear@users.noreply.github.com>

--- a/.github/actions/setup-docker-environment/action.yaml
+++ b/.github/actions/setup-docker-environment/action.yaml
@@ -14,18 +14,13 @@ inputs:
     description: "GHCR password. Usually set from the secrets.GITHUB_TOKEN variable"
     required: true
 
-outputs:
-  sha_short:
-    description: "The short SHA used for image builds"
-    value: ${{ steps.vars.outputs.sha_short }}
-
 runs:
   using: "composite"
   steps:
     - name: Get Short SHA
       id: vars
       run: |
-        echo ::set-output name=sha_short::${GITHUB_SHA::7}
+        echo "sha_short=${GITHUB_SHA::7}" >> $GITHUB_ENV
       shell: bash
 
     - name: Set up QEMU
