--- a/.github/workflows/publish-arc.yaml
+++ b/.github/workflows/publish-arc.yaml
@@ -45,7 +45,6 @@ jobs:
           make github-release
 
       - name: Setup Docker Environment
-        id: vars
         uses: ./.github/actions/setup-docker-environment
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
@@ -63,9 +62,9 @@ jobs:
           tags: |
             ${{ env.DOCKERHUB_USERNAME }}/actions-runner-controller:latest
             ${{ env.DOCKERHUB_USERNAME }}/actions-runner-controller:${{ env.VERSION }}
-            ${{ env.DOCKERHUB_USERNAME }}/actions-runner-controller:${{ env.VERSION }}-${{ steps.vars.outputs.sha_short }}
+            ${{ env.DOCKERHUB_USERNAME }}/actions-runner-controller:${{ env.VERSION }}-${{ env.sha_short }}
             ghcr.io/actions-runner-controller/actions-runner-controller:latest
             ghcr.io/actions-runner-controller/actions-runner-controller:${{ env.VERSION }}
-            ghcr.io/actions-runner-controller/actions-runner-controller:${{ env.VERSION }}-${{ steps.vars.outputs.sha_short }}
+            ghcr.io/actions-runner-controller/actions-runner-controller:${{ env.VERSION }}-${{ env.sha_short }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
