--- a/charts/actions-runner-controller/templates/githubwebhook.deployment.yaml
+++ b/charts/actions-runner-controller/templates/githubwebhook.deployment.yaml
@@ -51,6 +51,9 @@ spec:
         {{- if .Values.githubWebhookServer.queueLimit }}
         - "--queue-limit={{ .Values.githubWebhookServer.queueLimit }}"
         {{- end }}
+        {{- if .Values.githubWebhookServer.logFormat  }}  
+        - "--log-format={{ .Values.githubWebhookServer.logFormat }}"
+        {{- end }}
         command:
         - "/github-webhook-server"
         env:
