--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -30,9 +30,9 @@
     },
     {
       "fileMatch": [
-        "runner/actions-runner.dockerfile",
-        "runner/actions-runner-dind.dockerfile",
-        "runner/actions-runner-dind-rootless.dockerfile"
+        "runner/actions-runner.ubuntu-20.04.dockerfile",
+        "runner/actions-runner-dind.ubuntu-20.04.dockerfile",
+        "runner/actions-runner-dind-rootless.ubuntu-20.04.dockerfile"
       ],
       "matchStrings": ["RUNNER_VERSION=+(?<currentValue>.*?)\\n"],
       "depNameTemplate": "actions/runner",
