feat: 22.04 default runner image (#2050)
* feat: 22.04 default runner image

* docs: update bundled software

* chore: remove test in Dockerfile

* ci: add 22.04 runner build

* chore: remove build-essential

* chore: remove python path entry

Co-authored-by: toast-gear <toast-gear@users.noreply.github.com>

--- a/.github/workflows/runners.yaml
+++ b/.github/workflows/runners.yaml
@@ -45,6 +45,10 @@ jobs:
             os-name: ubuntu
             os-version: 20.04
             latest: "true"
+          - name: actions-runner
+            os-name: ubuntu
+            os-version: 22.04
+            latest: "false"
           - name: actions-runner-dind
             os-name: ubuntu
             os-version: 20.04
