ci: use single quotes (#2067)
* ci: use single quotes

* ci: add 22.04 image to renovate

Co-authored-by: toast-gear <toast-gear@users.noreply.github.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -31,6 +31,7 @@
     {
       "fileMatch": [
         "runner/actions-runner.ubuntu-20.04.dockerfile",
+        "runner/actions-runner.ubuntu-22.04.dockerfile",
         "runner/actions-runner-dind.ubuntu-20.04.dockerfile",
         "runner/actions-runner-dind-rootless.ubuntu-20.04.dockerfile"
       ],
