--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: File a bug report
 title: "<Please write what didn't work for you here>"
-labels: ["bug"]
+labels: ["bug", "needs triage"]
 body:
 - type: checkboxes
   id: read-troubleshooting-guide
