--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,3 @@
 # actions-runner-controller maintainers
+# @toast-gear will be re-added when write access is cleared
 * @mumoshu @actions/actions-runtime
