chore: add toast-gear to the list of maintainers (#2095)

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,2 @@
 # actions-runner-controller maintainers
-# @toast-gear will be re-added when write access is cleared
-* @mumoshu @actions/actions-runtime
+* @mumoshu @toast-gear @actions/actions-runtime
